/user/contacts izmjena, api nadopuna
