# routes/user.js
@@ -29,20 +29,16 @@ router.get('/info', function (req, res) {
 router.post('/contactRequest', function (req, res, next) {
     Privilege.forge({permittee_id: req.user.get('id'), permitter_id: req.body.user_id}).save().then(function () {
         res.end();
-    }).catch(function (error) {
-        console.log(error);
-    });
+    })
 });
 
 router.get('/contacts', function(req, res, next) {
-    User.where({username: req.query.username}).fetch().then(function (user) {
-        return Privilege.query(function(qb) {
-            qb.join('user', 'privilege.permitter_id', 'user.id')
-                .where('privilege.permittee_id', user.get('id'))
-                .orderBy('username', 'ASC');
-        }).fetchAll({columns: ['user.username']});
-    }).then(function (contacts) {
-        res.json(contacts);
+    Privilege.query(function(qb) {
+        qb.join('user', 'privilege.permitter_id', 'user.id')
+            .where('privilege.permittee_id', req.query.id || req.user.get('id'))
+            .orderBy('username', 'ASC');
+    }).fetchAll({columns: ['user.id', 'user.username']}).then(function (contacts) {
+        res.json({contacts: contacts});
     }).catch(function(error) {
         console.log(error);
     });
